# yolov11-climbing-holds-detector

./: .gitignore  LESSON.md  PRD.md  REQUIREMENTS.md  pyproject.toml
.scratch/issues/: 001-scaffold-and-smoke-test.md  002-cli-pipeline-with-color.md  003-dataset-prep.md  004-training-entrypoint-and-colab.md  005-baseline-training-run.md  006-eval-script.md  007-model-assisted-labeling.md  008-own-data-and-retrain.md  009-tuning-and-readme.md  README.md
docs/learnings/: 001-scaffold-and-smoke-test.md  002-cli-pipeline-with-color.md  003-dataset-prep.md  004-training-entrypoint-and-colab.md
notebooks/: train_colab.ipynb
scripts/: _eval.py  compare_baselines.py  generate_dataset_fixture.py  generate_fixture.py  prepare_dataset.py  train.py  vlm_baseline.py
src/holds_detector/: __init__.py  cli.py  color.py  dataset.py  detect.py  pipeline.py  schema.py  train.py
tests/: test_cli.py  test_color.py  test_dataset.py  test_pipeline.py  test_schema.py  test_smoke.py  test_train.py
tests/fixtures/: golden_sample_wall.json
tests/fixtures/dataset/export_a/: data.yaml
tests/fixtures/dataset/export_a/train/labels/: wall_0.txt  wall_1.txt  wall_2.txt  wall_3.txt
tests/fixtures/dataset/export_a/valid/labels/: wall_0.txt  wall_1.txt
tests/fixtures/dataset/export_b/: data.yaml
tests/fixtures/dataset/export_b/train/labels/: gym_0.txt  gym_1.txt  gym_2.txt  gym_3.txt
tests/fixtures/dataset/export_defects/train/labels/: out_of_bounds.txt  two_points.txt  zero_area.txt
