[project]
name = "climbing-holds-detector"
version = "0.1.0"
description = "Detect climbing holds (instance segmentation) and extract their colors from wall photos"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3",
    "opencv-python>=4.10",
    "numpy>=1.26",
]

[project.scripts]
holds-detect = "holds_detector.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holds_detector"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
# Notebooks mix IPython magics (!cmd, {var}) that aren't valid Python; docs/ holds
# throwaway chart-generation scripts, not application source.
extend-exclude = ["notebooks", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
